--- a/.github/workflows/validate_branch_on_pr.yml
+++ b/.github/workflows/validate_branch_on_pr.yml
@@ -6,21 +6,7 @@ on:
 jobs: 
    validate-branch:
       runs-on: ubuntu-latest
-      steps:
-
-        # Verify that the branch has one of the valid prefixes (reports, tasks, docs, tools). Fail for anything else.
-        - name: Check Branch Name
-          uses: actions/github-script@v7
-          with:
-            script: |
-              const branchName = context.payload.pull_request.head.ref;
-              const regex = /^reports|tasks|docs|tools\//;
-              if (!regex.test(branchName)) {
-                 core.setFailed('Branch does not follow required naming convention. Please refer to the contribution guide.');
-              } else {
-                 console.log('Branch name matches required format.');
-              }
-              
+      steps:  
         # Verify that a TRR update branch contains a trr0000 folder (the name specified in the contribution guide for a new TRR)
         # Failure to use the right folder name will cause a TRR number assignment failure later.
         - if: ${{ startsWith(github.head_ref, 'reports/') && !startsWith(github.head_ref, 'reports/update/') }} 
@@ -52,7 +38,7 @@ jobs:
           uses: tj-actions/changed-files@6cb76d07bee4c9772c6882c06c37837bf82a04d3 # v46
           id: changed-files
           
-        - name: Validate branch only changes files in appropriate folder 2
+        - name: Validate branch only changes files in appropriate folder
           uses: actions/github-script@v7
           with:
             script: |
